--- a/dashboard/templates/howto.html
+++ b/dashboard/templates/howto.html
@@ -2,7 +2,7 @@
 
 {% block pagebanner %}
     <div style="padding-left:20px">
-      <h1>How To <small>work with {{ app_name }}...</small></h1>
+      <h1>How To <small>&nbsp;Getting started with {{ app_name }} ...</small></h1>
     </div>
 {% endblock %}
 
