--- a/dashboard/templates/settings/summary.html
+++ b/dashboard/templates/settings/summary.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block navigation %}
-    <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-home"></i></a>
+    <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-dashboard"></i></a>
     <a href="{% url 'settings' %}" class="btn btn-default">Settings</a>
     <div class="btn btn-default disabled">Summary</div>
 {% endblock %}
