--- a/dashboard/templates/settings/graphrule_new.html
+++ b/dashboard/templates/settings/graphrule_new.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block navigation %}
-    <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-home"></i></a>
+    <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-dashboard"></i></a>
     <a href="{% url 'settings' %}" class="btn btn-default">Settings</a>
     <a href="{% url 'settings-graph-rules' %}" class="btn btn-default">Graph Rules</a>
     <a href="{% url 'settings-graph-rules-new' %}" class="btn btn-default">Add</a>
