--- a/dashboard/templates/settings/settings_base.html
+++ b/dashboard/templates/settings/settings_base.html
@@ -2,7 +2,7 @@
 
 {% block pagebanner %}
     <div style="padding-left:20px">
-      <h1>App Settings <small>inventory and configuration</small></h1>
+      <h1>Settings <small>&nbsp;Manage inventory and configurations ...</small></h1>
     </div>
 {% endblock %}
 
@@ -27,10 +27,6 @@
       <li id="tab-packages" role="presentation"><a href="{% url 'settings-packages' %}">Packages</a></li>
       <li id="tab-graph-rules" role="presentation"><a href="{% url 'settings-graph-rules' %}">Graph Rules</a></li>
       <!--<li id="tab-notification" role="presentation"><a href="{% url 'settings-notification' %}">Notification</a></li>-->
-      {% if user.is_authenticated %}
-        <li id="tab-jobs" role="presentation"><a href="{% url 'settings-jobs' %}">Jobs</a></li>
-      {% endif %}
-        <li id="tab-logs" role="presentation"><a href="{% url 'settings-logs' %}">Logs</a></li>
     </ul>
     <div style="padding:20px">
         {% block tabcontent %}{% endblock %}
