--- a/dashboard/templates/jobs/jobs_base.html
+++ b/dashboard/templates/jobs/jobs_base.html
@@ -8,13 +8,7 @@
 
 {% block extrascript %}
 <style type="text/css">
-    img {
-      display: block;
-      max-width:50px;
-      max-height:50px;
-      width: auto;
-      height: auto;
-    }
+    img{display:block;max-width:50px;max-height:50px;width:auto;height:auto}
 </style>
 {% endblock %}
 
