--- a/dashboard/templates/stats/trans_status_package.html
+++ b/dashboard/templates/stats/trans_status_package.html
@@ -1,5 +1,5 @@
 {% extends "stats/status_packages.html" %}
-{% load crispy_forms_tags custom_tags %}
+{% load custom_tags %}
 
 {% block extrascript %}
 <script src="/static/js/jquery.flot.js"></script>
@@ -7,298 +7,18 @@
 <script src="/static/js/waiting.dialog.js"></script>
 <script src="/static/js/csrf.js"></script>
 <style type="text/css">
-    .table-area {
-        width:100%;
-        min-height:250px;
-        height:100%;
-    }
-    .graph-area {
-        width:100%;
-        min-height:600px;
-    }
+    .table-area{width:100%;min-height:250px;height:100%}.graph-area{width:100%;min-height:600px}
 </style>
 <script type="text/javascript">
-function csrfSafeMethod(a) {
-    return /^(GET|HEAD|OPTIONS|TRACE)$/.test(a)
-}
-
-function ajax_tabular() {
-    return $.ajax({
-        beforeSend: function(a, b) {
-            csrfSafeMethod(b.type) || this.crossDomain || (csrftoken ? a.setRequestHeader("X-CSRFToken", csrftoken) : a.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), waitingDialog.show()
-        },
-        type: "POST",
-        url: "{% url 'ajax-tabular-data' %}",
-        data: {
-            package: $("#packageName").val()
-        },
-        success: function(a) {
-            waitingDialog.hide(), $("#tablearea").html(a)
-        }
-    })
-}
-
-function ajax_graph() {
-    var c = $("#packageName").val();
-    return $.ajax({
-        beforeSend: function(a, b) {
-            csrfSafeMethod(b.type) || this.crossDomain || (csrftoken ? a.setRequestHeader("X-CSRFToken", csrftoken) : a.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $("#localegraph").hide(), $("#hideLocaleGraph").hide(), $("#langName").selectpicker("hide"), $("#langName").selectpicker("val", "Select Language"), waitingDialog.show()
-        },
-        type: "POST",
-        url: "{% url 'ajax-graph-data' %}",
-        data: {
-            package: c
-        },
-        dataType: "json",
-        success: function(b) {
-            waitingDialog.hide();
-            var d = b.pkg_desc,
-                e = b.graph_data,
-                f = b.ticks,
-                g = [];
-            for (version in e) e.hasOwnProperty(version) && g.push({
-                label: version,
-                data: e[version]
-            });
-            var h = {
-                series: {
-                    lines: {
-                        show: !0,
-                        lineWidth: .5
-                    },
-                    points: {
-                        radius: 4,
-                        fill: !0,
-                        show: !0
-                    }
-                },
-                xaxis: {
-                    axisLabel: "Languages",
-                    axisLabelUseCanvas: !0,
-                    axisLabelFontSizePixels: 12,
-                    axisLabelFontFamily: "Verdana, Arial",
-                    axisLabelPadding: 10,
-                    ticks: f
-                },
-                yaxis: {
-                    axisLabel: "Translation",
-                    axisLabelUseCanvas: !0,
-                    axisLabelFontSizePixels: 12,
-                    axisLabelFontFamily: "Verdana, Arial",
-                    axisLabelPadding: 3,
-                    tickFormatter: function(a, b) {
-                        return a + "%"
-                    },
-                    minTickSize: 1,
-                    tickDecimals: 2
-                },
-                legend: {
-                    show: !0,
-                    noColumns: 0,
-                    labelBoxBorderColor: "Grey",
-                    position: "ne"
-                },
-                grid: {
-                    hoverable: !0,
-                    borderWidth: 2,
-                    backgroundColor: {
-                        colors: ["#ffffff", "#EDF5FF"]
-                    }
-                },
-                tooltip: {
-                    show: !0,
-                    content: "%s | %y translated"
-                }
-            };
-            if (g.length > 0) {
-                $("#localegraph").hide(), $("#grapharea").show(), $.plot($("#grapharea"), g, h), $("#graphinfo").html("Translation status of " + c + " for " + g.length + " branch(es) in " + f.length + " language(s)."), $("#packagedesc").html(d), $("#graphdisclaimer").html(a), $("#langName").selectpicker("show")
-            };
-        }
-    })
-}
-
-function ajax_locale() {
-    var c = $("#packageName").val();
-    var d = $("#langName").val();
-    return $.ajax({
-        beforeSend: function(a, b) {
-            csrfSafeMethod(b.type) || this.crossDomain || (csrftoken ? a.setRequestHeader("X-CSRFToken", csrftoken) : a.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), waitingDialog.show()
-        },
-        type: "POST",
-        url: "{% url 'ajax-graph-data' %}",
-        data: {
-            package: c,
-            locale: d
-        },
-        dataType: "json",
-        success: function(b) {
-            waitingDialog.hide();
-            var e = b.pkg_desc,
-                f = b.graph_data,
-                g = b.ticks,
-                h = [{
-                    label: "Translation Progress",
-                    data: f
-                }],
-                i = {
-                    series: {
-                        bars: {
-                            show: !0
-                        }
-                    },
-                    bars: {
-                        align: "center",
-                        barWidth: .5 * g.length / 10,
-                        horizontal: !0
-                    },
-                    xaxis: {
-                        axisLabel: "Translation Percentage",
-                        axisLabelUseCanvas: !0,
-                        axisLabelFontSizePixels: 12,
-                        axisLabelFontFamily: "Verdana, Arial",
-                        axisLabelPadding: 10,
-                        max: 110,
-                        tickFormatter: function(a, b) {
-                            return a + "%"
-                        }
-                    },
-                    yaxis: {
-                        axisLabel: "Branches",
-                        axisLabelUseCanvas: !0,
-                        axisLabelFontSizePixels: 12,
-                        axisLabelFontFamily: "Verdana, Arial",
-                        axisLabelPadding: 3,
-                        ticks: g
-                    },
-                    legend: {
-                        noColumns: 0,
-                        labelBoxBorderColor: "#000000",
-                        position: "ne"
-                    },
-                    grid: {
-                        hoverable: !0,
-                        borderWidth: 2,
-                        backgroundColor: {
-                            colors: ["#ffffff", "#EDF5FF"]
-                        }
-                    },
-                    tooltip: {
-                        show: !0,
-                        content: "%y | %x translated"
-                    }
-                };
-                if (g.length > 0) {
-                    $("#grapharea").hide(), $("#localegraph").show(), $.plot($("#localegraph"), h, i), $("#graphinfo").html("Translation status of " + d + " for " + g.length + " branch(es) in " + c + " locale."), $("#packagedesc").html(e), $("#graphdisclaimer").html(a), $("#hideLocaleGraph").show()
-                };
-        }
-    })
-}
-
-function refresh_package() {
-    return $.ajax({
-        beforeSend: function(e, a) {
-            csrfSafeMethod(a.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $("#refreshProgress").html("<img src='/static/img/spin.gif'></img>")
-        },
-        type: "POST",
-        url: "{% url 'ajax-refresh-package' %}",
-        data: {
-            package: "{{ package_name }}",
-            task: $("#syncPackageIdentifier").val()
-        },
-        success: function(e) {
-            $("#refreshProgress").html("<span class='glyphicon glyphicon-ok-sign' style='color:green'></span>"), package_details(), load_table(), branch_mapping()
-        },
-        error: function(e, a, s) {
-            $("#refreshProgress").html("<span class='glyphicon glyphicon-exclamation-sign' style='color:orange'></span>")
-        }
-    })
-}
-
-function branch_mapping() {
-    $.ajax({
-        beforeSend: function(e, a) {
-            csrfSafeMethod(a.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $("#createBranchMapping").attr("disabled", !0)
-        },
-        type: "POST",
-        url: "{% url 'ajax-refresh-package' %}",
-        data: {
-            package: "{{ package_name }}",
-            task: $("#mapBranchesIdentifier").val()
-        },
-        success: function(e) {
-            $("#createBranchMapping").attr("disabled", !1), setTimeout(function() {
-                $("#div-branch-mapping").html(e)
-            }, 1e3)
-        },
-        error: function(e, a, s) {
-            $("#createBranchMapping").attr("disabled", !1)
-        }
-    })
-}
-
-function package_details() {
-    $.ajax({
-        beforeSend: function(e, a) {
-            csrfSafeMethod(a.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"))
-        },
-        type: "POST",
-        url: "{% url 'ajax-refresh-package' %}",
-        data: {
-            package: "{{ package_name }}",
-            task: "details"
-        },
-        success: function(e) {
-            $("#div-package-details").html(e)
-        }
-    })
-}
-
-function load_table() {
-    $("#btn-graph").removeClass("active"),
-    $("#btn-tabular").addClass("active"),
-    ajax_tabular(),
-    $("#hideLocaleGraph").hide(),
-    $("#langName").selectpicker("hide"),
-    $("#graphgroup").hide(),
-    $("#tablearea").show()
-}
-
-$(document).ready(function() {
-    $("#tab-translation-status").addClass("active"),
-    $("#tab-trans-status-packages").addClass("active"),
-    $("#btn-tabular").addClass("active"),
-    $("#graphgroup").hide(),
-    $("#localegraph").hide(),
-    $("#hideLocaleGraph").hide(),
-    $("#langName").selectpicker("hide"),
-    $("#packageName").val("{{ package_name }}"),
-    $("#packageName").change(function(a) {
-        window.location.replace("/translation-status/package/" + $(this).val())
-    }),
-    $('#btn-graph').click(function(){
-        $("#btn-tabular").removeClass("active"),
-        $("#btn-graph").addClass("active"),
-        ajax_graph(),
-        $("#tablearea").hide(),
-        $("#graphgroup").show()
-    }),
-    $('#btn-tabular').click(function(){
-        load_table()
-    }),
-    $("#syncTransplatformLink").click(function(e) {
-        return e.preventDefault(), refresh_package(), !1
-    }),
-    $("#createBranchMapping").click(function(e) {
-        return e.preventDefault(), branch_mapping(), !1
-    }),
-    $("#langName").change(function(b) {
-        ajax_locale(), !1
-    }),
-    $("#hideLocaleGraph").click(function(a) {
-        return a.preventDefault(), $("#localegraph").hide(), $("#langName").selectpicker("val", "Select Language"), $("#graphinfo").html(""), $("#grapharea").show(), $(this).hide()
-    })
-});
+    function csrfSafeMethod(a){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(a)}function ajax_tabular(){return $.ajax({beforeSend:function(a,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?a.setRequestHeader("X-CSRFToken",csrftoken):a.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),waitingDialog.show()},type:"POST",url:"{% url 'ajax-tabular-data' %}",data:{package:$("#packageName").val()},success:function(a){waitingDialog.hide(),$("#tablearea").html(a)}})}function ajax_graph(){var e=$("#packageName").val();return $.ajax({beforeSend:function(a,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?a.setRequestHeader("X-CSRFToken",csrftoken):a.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#localegraph").hide(),$("#hideLocaleGraph").hide(),$("#langName").selectpicker("hide"),$("#langName").selectpicker("val","Select Language"),waitingDialog.show()},type:"POST",url:"{% url 'ajax-graph-data' %}",data:{package:e},dataType:"json",success:function(t){waitingDialog.hide();var n=t.pkg_desc,r=t.graph_data,s=t.ticks,i=[];for(version in r)r.hasOwnProperty(version)&&i.push({label:version,data:r[version]});var o={series:{lines:{show:!0,lineWidth:.5},points:{radius:4,fill:!0,show:!0}},xaxis:{axisLabel:"Languages",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:10,ticks:s},yaxis:{axisLabel:"Translation",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:3,tickFormatter:function(a,e){return a+"%"},minTickSize:1,tickDecimals:2},legend:{show:!0,noColumns:0,labelBoxBorderColor:"Grey",position:"ne"},grid:{hoverable:!0,borderWidth:2,backgroundColor:{colors:["#ffffff","#EDF5FF"]}},tooltip:{show:!0,content:"%s | %y translated"}};i.length>0&&($("#localegraph").hide(),$("#grapharea").show(),$.plot($("#grapharea"),i,o),$("#graphinfo").html("Translation status of "+e+" for "+i.length+" branch(es) in "+s.length+" language(s)."),$("#packagedesc").html(n),$("#graphdisclaimer").html(a),$("#langName").selectpicker("show"))}})}function ajax_locale(){var e=$("#packageName").val(),t=$("#langName").val();return $.ajax({beforeSend:function(a,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?a.setRequestHeader("X-CSRFToken",csrftoken):a.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),waitingDialog.show()},type:"POST",url:"{% url 'ajax-graph-data' %}",data:{package:e,locale:t},dataType:"json",success:function(n){waitingDialog.hide();var r=n.pkg_desc,s=n.graph_data,i=n.ticks,o=[{label:"Translation Progress",data:s}],l={series:{bars:{show:!0}},bars:{align:"center",barWidth:.5*i.length/10,horizontal:!0},xaxis:{axisLabel:"Translation Percentage",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:10,max:110,tickFormatter:function(a,e){return a+"%"}},yaxis:{axisLabel:"Branches",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:3,ticks:i},legend:{noColumns:0,labelBoxBorderColor:"#000000",position:"ne"},grid:{hoverable:!0,borderWidth:2,backgroundColor:{colors:["#ffffff","#EDF5FF"]}},tooltip:{show:!0,content:"%y | %x translated"}};i.length>0&&($("#grapharea").hide(),$("#localegraph").show(),$.plot($("#localegraph"),o,l),$("#graphinfo").html("Translation status of "+t+" for "+i.length+" branch(es) in "+e+" locale."),$("#packagedesc").html(r),$("#graphdisclaimer").html(a),$("#hideLocaleGraph").show())}})}function refresh_package(){return $.ajax({beforeSend:function(a,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?a.setRequestHeader("X-CSRFToken",csrftoken):a.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#refreshProgress").html("<img src='/static/img/spin.gif'></img>")},type:"POST",url:"{% url 'ajax-refresh-package' %}",data:{package:"{{ package_name }}",task:$("#syncPackageIdentifier").val()},success:function(a){$("#refreshProgress").html("<span class='glyphicon glyphicon-ok-sign' style='color:green'></span>"),package_details(),load_table(),branch_mapping()},error:function(a,e,t){$("#refreshProgress").html("<span class='glyphicon glyphicon-exclamation-sign' style='color:orange'></span>")}})}function branch_mapping(){$.ajax({beforeSend:function(a,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?a.setRequestHeader("X-CSRFToken",csrftoken):a.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#createBranchMapping").attr("disabled",!0)},type:"POST",url:"{% url 'ajax-refresh-package' %}",data:{package:"{{ package_name }}",task:$("#mapBranchesIdentifier").val()},success:function(a){$("#createBranchMapping").attr("disabled",!1),setTimeout(function(){$("#div-branch-mapping").html(a)},1e3)},error:function(a,e,t){$("#createBranchMapping").attr("disabled",!1)}})}function package_details(){$.ajax({beforeSend:function(a,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?a.setRequestHeader("X-CSRFToken",csrftoken):a.setRequestHeader("X-CSRFToken","{{ csrf_token }}"))},type:"POST",url:"{% url 'ajax-refresh-package' %}",data:{package:"{{ package_name }}",task:"details"},success:function(a){$("#div-package-details").html(a)}})}function load_table(){$("#btn-graph").removeClass("active"),$("#btn-tabular").addClass("active"),ajax_tabular(),$("#hideLocaleGraph").hide(),$("#langName").selectpicker("hide"),$("#graphgroup").hide(),$("#tablearea").show()}$(document).ready(function(){$("#tab-translation-status").addClass("active"),$("#tab-trans-status-packages").addClass("active"),$("#btn-tabular").addClass("active"),$("#graphgroup").hide(),$("#localegraph").hide(),$("#hideLocaleGraph").hide(),$("#langName").selectpicker("hide"),$("#packageName").val("{{ package_name }}"),$("#packageName").change(function(a){window.location.replace("/translation-status/package/"+$(this).val())}),$("#btn-graph").click(function(){$("#btn-tabular").removeClass("active"),$("#btn-graph").addClass("active"),ajax_graph(),$("#tablearea").hide(),$("#graphgroup").show()}),$("#btn-tabular").click(function(){load_table()}),$("#syncTransplatformLink").click(function(a){return a.preventDefault(),refresh_package(),!1}),$("#createBranchMapping").click(function(a){return a.preventDefault(),branch_mapping(),!1}),$("#langName").change(function(a){ajax_locale()}),$("#hideLocaleGraph").click(function(a){return a.preventDefault(),$("#localegraph").hide(),$("#langName").selectpicker("val","Select Language"),$("#graphinfo").html(""),$("#grapharea").show(),$(this).hide()})});
 </script>
+{% endblock %}
+
+{% block navigation %}
+    <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-dashboard"></i></a>
+    <a href="{% url 'trans-status' %}" class="btn btn-default">Translation Status</a>
+    <a href="{% url 'trans-status-packages' %}" class="btn btn-default">Packages</a>
+    <a href="{% url 'trans-status-package' package_name %}" class="btn btn-default">{{ package_name }}</a>
 {% endblock %}
 
 {% block dataviews %}
