--- a/dashboard/templates/stats/_workload_detailed.html
+++ b/dashboard/templates/stats/_workload_detailed.html
@@ -1,3 +1,5 @@
+<div style="padding:10px;background-color:azure;"><span style='padding-left:20px;padding-right:10px;' class='glyphicon glyphicon-info-sign' aria-hidden='true'></span>
+    <span class='text-info'>Percentage denotes translations completed for a language across packages.</span></div>
 <table class="table table-bordered table-hover">
     <thead>
       <tr>
