--- a/dashboard/templates/settings/stream_branches.html
+++ b/dashboard/templates/settings/stream_branches.html
@@ -43,7 +43,7 @@
                 {% endif %}
                 <span class="pull-right">
                     <a type="button" class="btn btn-default btn-small"
-                       href="{% url 'trans-status-release' relbranch.relbranch_slug %}">
+                       href="{% url 'trans-status-release' relbranch.relbranch_slug %}" data-toggle="tooltip" title="Stats">
                         <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
                     </a>
                 </span>
