--- a/dashboard/templates/stats/status_releases.html
+++ b/dashboard/templates/stats/status_releases.html
@@ -42,7 +42,7 @@
                 {% block dataviews %}
                     {% if releases %}
                     <span class="pull-right">
-                        <a id="refresh-releases-summary" class="btn btn-default btn-small">
+                        <a id="refresh-releases-summary" class="btn btn-default btn-small" data-toggle="tooltip" title="Refresh Summary">
                             <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
                         </a>
                     </span>
