--- a/dashboard/templates/stats/status_packages.html
+++ b/dashboard/templates/stats/status_packages.html
@@ -43,7 +43,7 @@
                 {% block dataviews %}
                     {% if packages %}
                     <span class="pull-right">
-                        <a id="refresh-packages-summary" class="btn btn-default btn-small">
+                        <a id="refresh-packages-summary" class="btn btn-default btn-small" data-toggle="tooltip" title="Refresh Summary">
                             <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
                         </a>
                     </span>
