--- a/dashboard/templates/stats/trans_status_release.html
+++ b/dashboard/templates/stats/trans_status_release.html
@@ -28,7 +28,7 @@
       <button type="button" id="btn-detailed" class="btn btn-default">Detailed</button>
       <button type="button" id="btn-lang-wise" class="btn btn-default">Language Wise</button>
     </span>
-    <a class="btn btn-default btn-small" href="{% url 'settings-stream-branches' release_stream %}">
+    <a class="btn btn-default btn-small" href="{% url 'settings-stream-branches' release_stream %}" data-toggle="tooltip" title="{{ release_branch }} Settings">
         <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
     </a>
 </span>
