--- a/dashboard/templates/settings/package_new.html
+++ b/dashboard/templates/settings/package_new.html
@@ -31,13 +31,13 @@
 {% for message in messages %}
     {% if 'success' in message.tags %}
         <div class="alert alert-success alert-dismissable">
-          <button type="button" class="close" aria-hidden="true">&times;</button>
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
           <p>{{ message }}</p>
         </div>
     {% endif %}
     {% if 'error' in message.tags %}
         <div class="alert alert-danger alert-dismissable">
-          <button type="button" class="close" aria-hidden="true">&times;</button>
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
           <p>{{ message }}</p>
         </div>
     {% endif %}
