--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="author" content="suanand@redhat.com">
     <link rel="icon" href="/static/img/favicon.ico">
 
-    <title>{{ app_name|lower }}</title>
+    <title>{{ app_name }}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
