[UI] Modify base.html to use PatternFly
- One JS workaround to make the about modal work on mobile devices
- Have proper ids to elements, <element-type>-<name> i.e. button-user
- Using npm to install PatternFly and it's dependencies
- Add make ui-deps which runs npm install
- Run ui-deps for make static as well
- Download the node_modules inside transtats/node, package.json is also present there
- Modify transtats.css to have different background color and extra bottom margin

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/transtats/static/css/transtats.css
+++ b/transtats/static/css/transtats.css
@@ -1,3 +1,12 @@
+/* Transtats custom CSS */
+.cards-ts {
+    background: #f0f0f0;
+}
+.container-cards-pf {
+    margin-bottom: 20px;
+}
+
+/*
 body {
     padding-top: 50px;
     padding-bottom: 10px
@@ -27,3 +36,4 @@ body {
 .nounderline {
     text-decoration: none
 }
+*/
